src/test/ui/proc-macro/derive-still-gated.stderr
error[E0658]: The attribute `derive_A` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/derive-still-gated.rs:8:3
   |
LL | #[derive_A] //~ ERROR attribute `derive_A` is currently unknown
   |   ^^^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
